syntax = "proto3";

package max;

message SqrtRequest {
	int32 number = 1;
}

message SqrtResponse {
	double square_root = 1;
}

service SqrtService {
	rpc sqrt (SqrtRequest) returns (SqrtResponse) {}
}